[package]
name = "nittei-common"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
guards=["rocket"]

[dependencies]
serde={version="~1.0", features=["derive"]}
jsonwebtoken = "~7.2"
rocket = {git="https://github.com/SergioBenitez/Rocket", version="0.5.0-rc.1", optional = true}
ron = "~0.7"
